# twinflight-mission-v2

./: .gitignore  README.md
docs/: architecture.md  capture_checklist.md  presentation_script.md  team_connection.md  troubleshooting.md
ros2_ws/src/twinflight_mission/: package.xml  setup.py
ros2_ws/src/twinflight_mission/config/: mission.yaml
ros2_ws/src/twinflight_mission/launch/: mission.launch.py
ros2_ws/src/twinflight_mission/twinflight_mission/: mission_logger.py  mission_node.py  mission_planner.py  mission_preview.py
scripts/: 01_run_px4_sitl.sh  02_run_microxrce_agent.sh  03_build_ros2_ws.sh  04_run_mission.sh  05_check_topics.sh
